--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,21 @@
     </parent>
 
     <build>
+        <directory>${BuildDir}/target</directory>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.2</version>
                 <configuration>
-                    <webappDirectory>target/generated-resources/showcase-web</webappDirectory>
+                    <webappDirectory>${BuildDir}/showcase-web</webappDirectory>
+                    <outputDirectory>${BuildDir}</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency>
@@ -57,5 +61,16 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <profiles>
+    <profile>
+        <id>Prod</id>
+        <activation>
+            <activeByDefault>true</activeByDefault>
+        </activation>
+        <properties>
+            <BuildDir>/home/prageeth/Installs/git-projects/sppabe/showcase-web</BuildDir>
+        </properties>
+    </profile>
+    </profiles>
 
 </project>
